--- a/register_to_mongodb/views/register.ejs
+++ b/register_to_mongodb/views/register.ejs
@@ -7,6 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <title>NFP</title>
 </head>
 
@@ -21,7 +22,12 @@
             </div>
             <div class="mb-3">
               <label for="pw" class="form-label">비밀번호</label>
-              <input type="password" id="pw" class="form-control" name="pw">
+              <div class="input-group">
+                <input type="password" id="pw" class="form-control" name="pw">
+                <button type="button" id="togglePassword" class="btn btn-outline-secondary">
+                    <i id="eyeIcon" class="bi bi-eye"></i>
+                </button>
+            </div>
             </div>
             <button type="button" id="register" class="btn btn-outline-dark">회원가입</button>
             <a href="/member/login" class="btn btn-outline-primary">뒤로</a>
@@ -32,7 +38,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.js"></script>
     <script>
+        $(document).ready(function() {
+            $('#togglePassword').click(function() {
+                const passwordField = $('#pw');
+                const eyeIcon = $('#eyeIcon');
+
+                // Toggle password visibility
+                if (passwordField.attr('type') === 'password') {
+                    passwordField.attr('type', 'text');
+                    eyeIcon.removeClass('bi-eye').addClass('bi-eye-slash');
+                } else {
+                    passwordField.attr('type', 'password');
+                    eyeIcon.removeClass('bi-eye-slash').addClass('bi-eye');
+                }
+            });
+
+
         $('#register').click(() => {
             const id = $('#id').val();
             const pw = $('#pw').val();
@@ -48,6 +71,7 @@
                 console.error(textStatus, errorThrown);
             });
         });
+    });
     </script>
 </body>
 </html>
