--- a/photo_to_mongodb/views/search.ejs
+++ b/photo_to_mongodb/views/search.ejs
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Results</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Photo Locations</h1>
-    <ul>
-        <% if (photos && photos.length > 0) { %>
+    <div class="container">
+        <h1 class="mt-5">Search Results</h1>
+        <div class="row">
             <% photos.forEach(photo => { %>
-                <li>
-                    <img src="/image/<%= photo.filename %>" alt="<%= photo.filename %>" style="width: 200px; height: auto;"/>
-                    <a href="/location?address=<%= encodeURIComponent(photo.address) %>">
-                        <%= photo.address || 'No address' %>
-                    </a>
-                </li>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="/image/<%= photo.filename %>" class="card-img-top" alt="<%= photo.filename %>">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= photo.filename %></h5>
+                            <p class="card-text">Address: <%= photo.address %></p>
+                            <p class="card-text">Likes: <%= photo.likes %></p>
+                            <p class="card-text">Timestamp: <%= photo.timestamp %></p>
+                            <p class="card-text">GPS: Latitude <%= photo.gps.latitude %>, Longitude <%= photo.gps.longitude %></p>
+                        </div>
+                    </div>
+                </div>
             <% }) %>
-        <% } else { %>
-            <p>No photos found.</p>
-        <% } %>
-    </ul>
+        </div>
+    </div>
 </body>
 </html>
