--- a/photo_and_register/views/search.ejs
+++ b/photo_and_register/views/search.ejs
@@ -16,7 +16,9 @@
                         <img src="/image/<%= photo.filename %>" class="card-img-top" alt="<%= photo.filename %>">
                         <div class="card-body">
                             <h5 class="card-title"><%= photo.filename %></h5>
-                            <p class="card-text">Address: <%= photo.address %></p>
+                            <p class="card-text">
+                                Address: <a href="/location?address=<%= encodeURIComponent(photo.address) %>"><%= photo.address %></a>
+                            </p>
                             <p class="card-text">Likes: <%= photo.likes %></p>
                             <p class="card-text">Timestamp: <%= photo.timestamp %></p>
                             <p class="card-text">GPS: Latitude <%= photo.gps.latitude %>, Longitude <%= photo.gps.longitude %></p>
