--- a/photo_and_register/views/search.ejs
+++ b/photo_and_register/views/search.ejs
@@ -7,25 +7,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-5">Search Results</h1>
+    <div class="container mt-5">
+        <h1>Search Results</h1>
         <div class="row">
-            <% photos.forEach(photo => { %>
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <img src="/image/<%= photo.filename %>" class="card-img-top" alt="<%= photo.filename %>">
-                        <div class="card-body">
-                            <h5 class="card-title"><%= photo.filename %></h5>
-                            <p class="card-text">
-                                Address: <a href="/location?address=<%= encodeURIComponent(photo.address) %>"><%= photo.address %></a>
-                            </p>
-                            <p class="card-text">Likes: <%= photo.likes %></p>
-                            <p class="card-text">Timestamp: <%= photo.timestamp %></p>
-                            <p class="card-text">GPS: Latitude <%= photo.gps.latitude %>, Longitude <%= photo.gps.longitude %></p>
+            <% if (photos.length > 0) { %>
+                <% photos.forEach(photo => { %>
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="/image/<%= photo.filename %>" class="card-img-top" alt="<%= photo.filename %>">
+                            <div class="card-body">
+                                <h5 class="card-title"><%= photo.filename %></h5>
+                                <p class="card-text">Address: <%= photo.address %></p>
+                                <p class="card-text">Likes: <%= photo.likes %></p>
+                                <p class="card-text">Timestamp: <%= photo.timestamp %></p>
+                                <p class="card-text">GPS: Lat: <%= photo.gps.latitude %>, Lon: <%= photo.gps.longitude %></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            <% }) %>
+                <% }) %>
+            <% } else { %>
+                <p>No photos found.</p>
+            <% } %>
         </div>
     </div>
 </body>
