--- a/photo_and_register/views/search.ejs
+++ b/photo_and_register/views/search.ejs
@@ -1,4 +1,3 @@
-<!-- search.ejs -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -19,6 +18,7 @@
             width: 100%;
             height: 200px;
             object-fit: cover;
+            cursor: pointer;
         }
         .card-body {
             padding: 15px;
@@ -49,11 +49,11 @@
     <div class="container">
         <% photos.forEach(function(photo) { %>
             <div class="card">
-                <img src="/image/<%= photo.filename %>" alt="<%= photo.filename %>" class="card-img">
+                <img src="/image/<%= photo.filename %>" alt="<%= photo.filename %>" class="card-img" onclick="window.location.href='/location?address=<%= encodeURIComponent(photo.address) %>&latitude=<%= photo.gps.latitude %>&longitude=<%= photo.gps.longitude %>'">
                 <div class="card-body">
                     <h5 class="card-title"><%= photo.filename %></h5>
                     <p class="card-text">
-                        주소: <a href="/location?address=<%= encodeURIComponent(photo.address) %>"><%= photo.address %></a>
+                        <p>주소: <%= photo.address %></p>
                     </p>
                     <p class="card-text">
                         설명: <%= photo.description || 'No description' %>
