--- a/photo_and_register/views/mypage.ejs
+++ b/photo_and_register/views/mypage.ejs
@@ -80,7 +80,7 @@
 
         <!-- 콘텐츠 영역 -->
         <div class="content">
-            <h1>Welcome <%= user.id %>님, 사실 별로 환영 안해</h1>
+            <h1>Welcome <%= user.name %>님, 사실 별로 환영 안해</h1>
             <p>이곳에서 당신의 노가다를 표출하세요.</p>
         </div>
     </div>
