Update PlaceId and checkbox

--- a/photo_and_register/views/location.ejs
+++ b/photo_and_register/views/location.ejs
@@ -139,6 +139,7 @@
             var latitude = '<%= latitude %>'; // 서버에서 전달받은 위도
             var longitude = '<%= longitude %>'; // 서버에서 전달받은 경도
             var userId = '<%= userId %>'; // 서버에서 전달받은 사용자 ID (필요시 추가)
+            var likedPlaceIds = '<%= JSON.stringify(likedPlaceIds) %>';
             var mapOptions;
             var centerLatLng;
 
@@ -315,6 +316,7 @@
                     var itemEl = document.createElement('li');
                     var checkbox = document.createElement('input');
                     checkbox.type = 'checkbox';
+                    checkbox.checked = likedPlaceIds.includes(place.id);
                     checkbox.addEventListener('click', function() {
                         handleCheckboxClick(place.id, userId, checkbox.checked);
                     });
@@ -340,35 +342,32 @@
             }
 
             // 체크박스 클릭 이벤트 처리 함수
-            // 체크박스 클릭 이벤트 처리 함수
-function handleCheckboxClick(placeId, userId, isChecked) {
-    var action = isChecked ? 'add' : 'remove'; // add 또는 remove 결정
-    var url = `/places/${action}`;
-    var data = {
-        placeId: placeId,
-        userId: userId
-    };
+            function handleCheckboxClick(placeId, userId, isChecked) {
+                var url = isChecked ? '/places/add' : '/places/remove';
+                var data = {
+                    placeId: placeId,
+                    userId: userId
+                };
 
-    fetch(url, {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
-    })
-    .then(response => response.json())
-    .then(result => {
-        if (result.message === 'Success') {
-            console.log('요청 성공:', result);
-        } else {
-            console.error('요청 실패:', result);
-        }
-    })
-    .catch(error => {
-        console.error('요청 오류:', error);
-    });
-}
-
+                fetch(url, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                })
+                .then(response => response.json())
+                .then(result => {
+                    if (result.success) {
+                        console.log('요청 성공:', result);
+                    } else {
+                        console.error('요청 실패:', result);
+                    }
+                })
+                .catch(error => {
+                    console.error('요청 오류:', error);
+                });
+            }
 
             // 정보창을 표시하는 함수
             function displayInfowindow(marker, title) {
@@ -378,5 +377,6 @@ function handleCheckboxClick(placeId, userId, isChecked) {
             }
         });
     </script>
+    
 </body>
 </html>
